--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@nuxt/eslint": "^1.0.0",
     "@nuxt/ui": "^2.21.0",
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "0.9.0",
     "eslint": "^9.19.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "nuxt": "^3.15.4",
+    "pinia": "^2.3.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
